--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,7 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^6.5.1",
+    "bootstrap": "^5.3.3",
     "formik": "^2.4.5",
+    "mdb-react-ui-kit": "^7.2.0",
+    "mdb-ui-kit": "^7.2.0",
     "next": "14.1.3",
     "react": "^18",
     "react-dom": "^18",
